--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -89,6 +89,7 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/loader.js"></script>
     <script src="/js/angular.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/controller.js"></script>
