--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -94,6 +94,7 @@
     <script src="/js/app.js"></script>
     <script src="/js/controller.js"></script>
     <script src="/js/jquery.js"></script>
+    <script src="/js/queueController.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
