--- a/views/queueStats.ejs
+++ b/views/queueStats.ejs
@@ -39,7 +39,19 @@ tr.highlight2 td {
 </table>
 </div>
 <div ng-controller="lineChartController" id="movingAverageCallstat"></div>
-
+<br>
+<div ng-controller="realTimelineChartController" id="realtimeCallstat"></div>
+<br>
+<div ng-controller="realTimeGuageController" id="chart_div">
+<table>
+<tr>
+<td><div id="responseRateRealTime" style="width: 400px; height: 120px;"></div></td>
+<td><div id="waitingTimeRealTime" style="width: 400px; height: 120px;"></div></td>
+<td><div id="talkingTimeRealTime" style="width: 400px; height: 120px;"></div></td>
+<td><div id="timeoutCountRealTime" style="width: 400px; height: 120px;"></div></td>
+</tr>
+</table>
+</div>
 </body>
 </html>
 
