Optimised IF condition for processing stats,included table chart,modified timelines for both moving and realtime stats

--- a/views/queueStats.ejs
+++ b/views/queueStats.ejs
@@ -45,6 +45,9 @@ tr.highlight2 td {
 <div ng-controller="realTimeGuageController" id="chart_div">
 <table>
 <tr>
+<td><div id="systemStatsSnapshot" style="width: 400px; height: 120px;"></div></td>
+</tr>
+<tr>
 <td><div id="responseRateRealTime" style="width: 400px; height: 120px;"></div></td>
 <td><div id="waitingTimeRealTime" style="width: 400px; height: 120px;"></div></td>
 <td><div id="talkingTimeRealTime" style="width: 400px; height: 120px;"></div></td>
