Improved the socket data rendering by giving a timeout,modified the UI to incorporate table

--- a/views/operator.ejs
+++ b/views/operator.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="/js/app.js"></script>
+<script src="/js/queueController.js"></script>
 <style>
 table, th , td  {
   border: 1px solid grey;
@@ -27,7 +29,7 @@ tr.highlight2 td {
 
 <body ng-app="myApp" id="body">
 
-
+<p><%= roomId %></p>
 <div  ng-controller="opprfController" id="opprfController"> 
 <table>
   <tr>
