--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%=typeof title == 'undefined' ? 'New Sails App' : title%></title>
+    <title><%=typeof title == 'undefined' ? 'Dashboard' : title%></title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -92,9 +92,9 @@
     <script src="/js/dependencies/loader.js"></script>
     <script src="/js/angular.js"></script>
     <script src="/js/app.js"></script>
+    <script src="/js/queueController.js"></script>
     <script src="/js/controller.js"></script>
     <script src="/js/jquery.js"></script>
-    <script src="/js/queueController.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
