--- a/views/queueStats.ejs
+++ b/views/queueStats.ejs
@@ -27,15 +27,23 @@ tr.highlight2 td {
 
 <body ng-app="myApp" id="body">
 <br>
+<div ng-controller="ticketClassificationController" id="ticketClassificationController">
+<table>
+<h>Ticket Classification</h>
+<tr>
+<div id="ticketClassification" style="width: 800px; height: 360px;"></div>
+</tr>
+</table>
+</div>
 
 <div ng-controller="guageController" id="guageController">
 <table>
 <h>Stats over the last 15 min</h>
 <tr>
-<td><div id="systemStatsSnapshot" style="width: 400px; height: 120px;"></div></td>
-<td><div id="responseRate" style="width: 400px; height: 120px;"></div></td>
-<td><div id="waitingTime" style="width: 400px; height: 120px;"></div></td>
-<td><div id="talkingTime" style="width: 400px; height: 120px;"></div></td>
+<td><div id="systemStatsSnapshotMovingAverage" style="width: 400px; height: 120px;"></div></td>
+<td><div id="responseRateMovingAverage" style="width: 400px; height: 120px;"></div></td>
+<td><div id="waitingTimeMovingAverage" style="width: 400px; height: 120px;"></div></td>
+<td><div id="talkingTimeMovingAverage" style="width: 400px; height: 120px;"></div></td>
 </tr>
 </table>
 </div>
