bootstrap for sails

--- a/views/temp.html
+++ b/views/temp.html
@@ -9,9 +9,9 @@
                 <!-- pie chart-->
                 <div class="col-lg-5">
                     <div id="ticketClassificationController" ng-controller="ticketClassificationController">
-
+                        <div class="panel panel-default">
                             <div id="ticketClassification" class="panel-body"></div>
-
+                        </div>
                     </div>
                 </div>
                 <!-- end pie chart-->
@@ -87,7 +87,7 @@
             <div class="row">
 
                 <div class="panel panel-default">
-                    <div class="panel-body" style="padding:5px;">
+                    <div class="panel-body">
                         <div id="movingAverageCallstat" ng-controller="lineChartController">
                         </div>
                     </div>
