--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,9 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/css/dependencies/bootstrap-theme.css">
+    <link rel="stylesheet" href="/css/dependencies/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/dependencies/dashboard.css">
     <!--STYLES END-->
   </head>
 
@@ -89,12 +92,18 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/ajquery.js"></script>
+    <script src="/js/dependencies/bootstrap.min.js"></script>
+    <script src="/js/dependencies/jquery.js"></script>
     <script src="/js/dependencies/loader.js"></script>
     <script src="/js/angular.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/queueController.js"></script>
+    <script src="/js/bootstrap.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
     <script src="/js/controller.js"></script>
     <script src="/js/jquery.js"></script>
+    <script src="/js/npm.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
