fine tune dashboard layout

--- a/views/queueStats.ejs
+++ b/views/queueStats.ejs
@@ -22,15 +22,16 @@
                     <div class="row">
                         <div id="realTimeGuageController" ng-controller="realTimeGuageController">
 
-                            <table class="table table-bordered">
+                            <table class="table table-bordered table-striped">
                                 <tr> 
                                     <td>
+                                        <h3>Real Time</h3>
                                         <div id="systemStatsSnapshotRealTime">
                                         </div>
                                     </td>
 
                                     <td>
-                                        <div id="responseRateRealTime" class="text-center"></div>
+                                        <div id="responseRateRealTime"></div>
                                     </td>
                                     <td>
 
@@ -45,6 +46,7 @@
 
                                 <tr> 
                                     <td>
+                                        <h3>Average</h3>
                                         <div id="systemStatsSnapshotMovingAverage">
                                         </div>
                                     </td>
