--- a/views/queueStats.ejs
+++ b/views/queueStats.ejs
@@ -1,4 +1,4 @@
-8<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head></head>
     <body data-ng-app="myApp">
@@ -67,7 +67,7 @@
             <div class="row">
                 <div class="panel panel-default">
                     <div class="panel-body" style="padding:5px;">
-                        <div id="movingAverageCallstat" ng-controller="lineChartController" style="display:none;">
+                        <div id="movingAverageCallstat" ng-controller="lineChartController" >
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
             <div class="row">
                 <div class="panel panel-default">
                     <div class="panel-body" style="padding:5px;">
-                        <div id="movingAverageCallstatUK" ng-controller="lineChartController" style="display:none;">
+                        <div id="movingAverageCallstatUK" ng-controller="lineChartController" >
                         </div>
                     </div>
                 </div>
